--- a/src/Compontents/Pages/Product.css
+++ b/src/Compontents/Pages/Product.css
@@ -93,7 +93,7 @@
 }
 
 .book-btn {
-  background-color: #222;
+  background-color: #4a00e0;
   color: white;
   padding: 10px 20px;
   border: none;
